full-moon/tests/cfxlua_cases/fail/parser/each_iteration/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cfxlua_cases/fail/parser/each_iteration
---
error[ast]: expected name after `for`
  ┌─ source.lua:2:1
  │
2 │ for in each(t) do print(k, v) end
  │ ^^^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:2:5
  │
2 │ for in each(t) do print(k, v) end
  │     ^^
